@@ -79,6 +79,8 @@ SCM_ORD_SIG, SCM_NUM_SIGS
 Use SCM_ASSERT_RANGE or SCM_VALIDATE_XXX_RANGE instead of SCM_OUTOFRANGE.
 Use scm_memory_error instead of SCM_NALLOC.
 
+** Removed function:  scm_struct_init
+
 ** Deprecated function:  scm_call_catching_errors
 
 Use scm_catch or scm_lazy_catch from throw.[ch] instead.
